<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/frag_user_padding"
    tools:context=".ui.OneUserFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frag_user_txt_first_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frag_user_txt_last_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/frag_user_txt_phone"
        android:inputType="phone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_user_txt_edit_save" />

</androidx.appcompat.widget.LinearLayoutCompat>